[package]
name = "yggdrasil-fe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
rand = { version = "0.7" }
rand_core = { version = "0.5" }
ed25519-dalek = { version = "1.0.1", default-features = false, features = [ "std", "rand", "serde" ] }
rustls = { version = "0.20.6", features = ["dangerous_configuration"] }
num_enum = "0.5.7"
integer-encoding = "3.0.4"

[features]
default = [ "ed25519-dalek/u64_backend" ]
simd = [ "ed25519-dalek/simd_backend" ]
